# NaviFitting

./: CMakeLists.txt  NaviArc.cpp  NaviClothoid.h  NaviCurvePrimitive.cpp  README.md  RationalFresnel.cpp  RationalFresnel.h
trunk/inc/: CenterofMassCalculator.h  GaussProjector.h  NaviArc.h  NaviClothoid.h  NaviCurvePrimitive.h  NaviLine.h  RationalFresnel.h  defs.h
trunk/src/: CenterofMassCalculator.cpp  GaussProjector.cpp  NaviArc.cpp  NaviClothoid.cpp  NaviCurvePrimitive.cpp  NaviLine.cpp  RationalFresnel.cpp
